<resources>
    <string name="app_name">MasterCalculatorAndroid</string>
    <string name="start_app">Start app</string>
    <string name="todo">TODO</string>
    <string name="click_here">Click here</string>
    <string name="about_us">About Us</string>
    <string name="know_more">Know more</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="image_not_found">Image not Found</string>
    <string name="calculation_utilities">Calculation Utilities</string>
    <string name="mutual_fund">Mutual Fund</string>
    <string name="interest">Interest</string>
    <string name="discount">Discount</string>
    <string name="emi">EMI</string>
    <string name="school_result">School Result</string>
    <string name="square_or_hour">Square or Hour</string>
    <string name="mutual_fund_calculator">Mutual Fund Calculator</string>
    <string name="monthly_investment">Monthly Investment</string>
    <string name="_500">500</string>
    <string name="expected_return_in">Expected Return in (%)</string>
    <string name="_20">20%</string>
    <string name="_5">5</string>
    <string name="time_period_in_yr">Time Period in (yr)</string>
    <string name="calculate">Calculate</string>
    <string name="invest">Invest</string>
    <string name="invested">Invested</string>
    <string name="total_value">Total Value</string>
    <string name="est_return">Est. Return</string>
    <string name="dash">_ _ _</string>
    <string name="interest_calculator">Interest Calculator</string>
    <string name="principal_amount">Principal Amount</string>
    <string name="amount">Amount</string>
    <string name="interest_rate_in">Interest Rate in (%)</string>
    <string name="_05">05</string>
    <string name="discount_calculator">Discount Calculator</string>
    <string name="price">Price</string>
    <string name="enter_your_price">Enter Your Price</string>
    <string name="enter_your_discount">Enter your Discount</string>
    <string name="dash2">---</string>
    <string name="price_after_discount">Price after Discount :</string>
    <string name="saved_price">Saved Price : </string>
    <string name="emi_calculator">EMI Calculator</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="interest_rate">Interest Rate (%)</string>
    <string name="time_period_in">Time Period in</string>
    <string name="year">Year</string>
    <string name="total_amount">Total Amount</string>
    <string name="total_interest">Total Interest</string>
    <string name="total_payable_amount">Total Payable Amount</string>
    <string name="your_percentage">Your Percentage</string>
    <string name="total_marks">Total Marks</string>
    <string name="your_total_marks">Your Total Marks</string>
    <string name="your_marks">Your Marks</string>
    <string name="result">Result</string>
    <string name="input_number">Input Number</string>
    <string name="number">Number</string>
    <string name="add_square_or_hour">Add Square or Hour</string>
    <string name="square_or_hour2">Square or hour</string>
    <string name="About">All In One - Calculation Tool is a versatile app that simplifies complex calculations.It combines various calculators into a single,user-friendly interface,providing quick and accurate solutions for a wide range of mathematical and practical needs</string>

</resources>