<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/whiteBg"
    android:padding="18dp"
    tools:context=".MainActivity">

    <!-- Title-->

    <FrameLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        tools:ignore="UselessParent">

        <View
            android:layout_width="370dp"
            android:layout_height="60dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageButton

                android:id="@+id/BackButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:contentDescription="@string/todo"
                android:src="@drawable/arrow_back"

                />

            <TextView
                android:id="@+id/title6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:text="@string/emi_calculator"
                android:textColor="@color/black"
                android:textSize="23sp" />

        </LinearLayout>

    </FrameLayout>

    <!-- Loan Amount -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="12dp">

        <TextView
            android:id="@+id/loan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/loan_amount"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/loanAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/amount"
            android:textColor="@color/grey"
            android:padding="10dp"
            android:background="@drawable/round_border"
            android:inputType="number" />
    </LinearLayout>

    <!-- Interest Rate -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginBottom="12dp">

        <TextView
            android:id="@+id/emiInterest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/interest_rate"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/emiInterestRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/interest"
            android:textColor="@color/grey"
            android:padding="10dp"
            android:background="@drawable/round_border"
            android:inputType="number" />
    </LinearLayout>

    <!-- Time Period -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/emiTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:text="@string/time_period_in"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/emiTimePeriods"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/_5"
            android:textColor="@color/grey"
            android:textAlignment="center"
            android:layout_marginStart="15dp"
            android:padding="10dp"
            android:background="@drawable/round_border"
            android:inputType="number" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:text="@string/year"
            android:textSize="16sp"
            android:textColor="@color/black" />
    </LinearLayout>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/calculate_button"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="18sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="35dp"
        >

        <!-- Total Amount -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/emiAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_amount"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/emiTotalAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dash"
                android:textAlignment="center"
                android:textSize="24sp"

                />

        </LinearLayout>

        <!-- Total Interest-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="50dp"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/totalInterest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_interest"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/emiTotalInterest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dash"
                android:textAlignment="center"
                android:textSize="24sp"

                />

        </LinearLayout>

    </LinearLayout>

    <!--Total Payable Amount-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >

        <TextView
            android:id="@+id/payableAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_payable_amount"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/totalPayableAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dash"
            android:textAlignment="center"
            android:textSize="24sp"

            />
    </LinearLayout>

</LinearLayout>