<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/whiteBg"
    android:padding="18dp"
    tools:context=".MainActivity">

    <!-- Title-->

    <FrameLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        tools:ignore="UselessParent">

        <View
            android:layout_width="370dp"
            android:layout_height="60dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageButton

                android:id="@+id/BackButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:contentDescription="@string/todo"
                android:src="@drawable/arrow_back"

                />

            <TextView
                android:id="@+id/title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:text="@string/mutual_fund_calculator"
                android:textColor="@color/black"
                android:textSize="23sp" />

        </LinearLayout>

    </FrameLayout>

    <!-- Monthly Investment -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="12dp">

        <TextView
            android:id="@+id/monthlyInvest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/monthly_investment"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/invest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/_500"
            android:textColor="@color/grey"
            android:padding="10dp"
            android:background="@drawable/round_border"
            android:inputType="number" />
    </LinearLayout>

    <!-- Expected Return -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginBottom="12dp">

        <TextView
            android:id="@+id/expectedReturn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/expected_return_in"
            android:textSize="17sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/Return"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/_20"
            android:textColor="@color/grey"
            android:padding="10dp"
            android:background="@drawable/round_border"
            android:inputType="number" />
    </LinearLayout>

    <!-- Time Period -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/time_period_in_yr"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/timePeriods"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/_5"
            android:textColor="@color/grey"
            android:padding="10dp"
            android:background="@drawable/round_border"
            android:inputType="number" />
    </LinearLayout>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/calculate_button"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="18sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="35dp"
        >

        <!-- Invested -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/invested"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invested"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/totalInvest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dash"
                android:textAlignment="center"
                android:textSize="24sp"

                />

        </LinearLayout>

        <!-- estmited returned-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/estimated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/est_return"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/estreturn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dash"
                android:textAlignment="center"
                android:textSize="24sp"

                />

        </LinearLayout>

        <!-- Total Value-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_value"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/totalvalue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dash"
                android:textAlignment="center"
                android:textSize="24sp"

                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>