<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/whiteBg"
    android:padding="18dp"
    tools:context=".MainActivity8">

    <!-- Title-->

    <FrameLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        tools:ignore="UselessParent">

        <View
            android:layout_width="350dp"
            android:layout_height="60dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageButton

                android:id="@+id/BackButton7"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/round_border"
                android:contentDescription="@string/todo"
                android:src="@drawable/arrow_back"

                />

            <TextView
                android:id="@+id/title8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/square_or_hour"
                android:textColor="@color/black"
                android:textSize="23sp" />

        </LinearLayout>

    </FrameLayout>

    <!-- Input Number -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="12dp">

        <TextView
            android:id="@+id/number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/input_number"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/inputNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/number"
            android:textColor="@color/black"
            android:padding="10dp"
            android:background="@drawable/round_border"
            android:inputType="number" />
    </LinearLayout>

    <!-- Add Square or hour -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginBottom="12dp">

        <TextView
            android:id="@+id/squareOrHour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/add_square_or_hour"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/addSquareOrHour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/square_or_hour2"
            android:textColor="@color/black"
            android:padding="10dp"
            android:background="@drawable/round_border"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/calculate_button"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="18sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        >

        <!-- Result -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="172dp"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                />
            <TextView
                android:id="@+id/SquareResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dash"
                android:textAlignment="center"
                android:textSize="24sp"

                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>